--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+<body>
+    <h1> JavaScript Introduction and Basics</h1>
+    <p> You can use 'var', 'const', and 'let' for variables in JavaScript</p>
+</body>
 <script>
     console.log("hello world");
+    //this is a comment
+    var myName = "bill"
+    myName = "hannah"
 </script>
+
+</html>
