add more variables

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     //this is a comment
     var myName = "bill"
     myName = "hannah"
+
+    let x, y, z;    // Statement 1
+    x = 5;          // Statement 2
+    y = 6;          // Statement 3
+    z = x + y;      // Statement 4  
 </script>
 
 </html>
