--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     x = 5;          // Statement 2
     y = 6;          // Statement 3
     z = x + y;      // Statement 4  
+
+    const price1 = 5;
+    const price2 = 6;
+    let total = price1 + price2;
 </script>
 
 </html>
