--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     const price1 = 5;
     const price2 = 6;
     let total = price1 + price2;
+
+
+    const cars = ["Saab", "Volvo", "BMW"];
+    //change element
+    cars[0] = "Toyota";
+
+    //add an element:
+    cars.push("Audi");
 </script>
 
 </html>
