--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
     // Date object:
     const date = new Date("2022-03-25");
+
+    //add buttons
+    <button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
+
 </script>
 
 </html>
