--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     //add buttons
     <button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
 
+    //string methods
+    let text = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+    document.getElementById("demo").innerHTML = text.length;
 </script>
 
 </html>
